8227384: C2 compilation fails with "graph should be schedulable" when running with -XX:-EliminateLocks

Reviewed-by: thartmann, kvn